Closed Bug 274271 Opened 21 years ago Closed 21 years ago

blocked install notification bar does not appear when clicking on InstallTrigger link

Categories

(Toolkit :: Add-ons Manager, defect)

x86
All
defect
Not set
major

Tracking

()

VERIFIED FIXED

People

(Reporter: wgianopoulos, Assigned: bugs)

References

Details

(Whiteboard: [asaP1])

Attachments

(2 files, 1 obsolete file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8a6) Gecko/20041211 Firefox/1.0+ Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8a6) Gecko/20041211 Firefox/1.0+ If a non-whielisted site tries to install software, the notifcation bar informing the user of this does not appear. Reproducible: Always Steps to Reproduce: 1. Remove update.mozilla.org from the Install whitelist 2. Go to Tools -> Extensions -> Get more extensions 3. Select any extesnsion and click on the "Install Now" link Actual Results: Absoulutely nothing (install blocked, but no notfication bar) Expected Results: Disaplyed the notfication bar at the top of the browser main window explianing that a software install was blocked and giving the user the option to change settings.
Keywords: aviary-landing
Only with installs using InstallTrigger, right? With 20041209, I get the infobar with a direct link to an .xpi, and nada with an InstallTrigger.Install().
Attached file installation testcase —
One InstallTrigger link, one direct .xpi link
Yes, I should have mentioned that. Appears to only be an issue with install trigger links.
I just noticed that bug 241705 now has an aviary-landing keyword saying that all the code for this UI has not yet been checked in. So, my guess is that is what is causing this issue.
Depends on: 241705
OS: Windows XP → All
Summary: Blocked Install Notification bar does not appear → blocked install notification bar does not appear when clicking on InstallTrigger link
Flags: blocking-aviary1.1?
*** Bug 283914 has been marked as a duplicate of this bug. ***
I'm assuming this will be taken care of prior to 1.1's release?
Flags: blocking-aviary1.1? → blocking-aviary1.1+
wfm Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050326 Firefox/1.0+
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050325 Firefox/1.0+ You sure about that? Still not working for me. You opened the test case and clicked the InstallTrigger link? And the information bar appeared when you did? You're certain?
Whiteboard: [asaP1]
*** Bug 289822 has been marked as a duplicate of this bug. ***
Confirmed not working in the latest DearPark Release Candidate (from Asa's blog). A few URLs to test this on: http://toolbar.a9.com/ http://extensions.jedbrown.net/ http://quicknote.mozdev.org/installation.html
Attached patch patch (obsolete) — — Splinter Review
This adds the code that is missing from the patch in bug 241705.
Attachment #184378 - Flags: review?(dveditz)
Attachment #184378 - Attachment is obsolete: true
Attachment #184378 - Flags: review?(dveditz)
Attached patch patch — — Splinter Review
Sorry, I missed a couple of brace style fixes in the first patch
Attachment #184379 - Flags: review?(dveditz)
I just applied the patch to my source tree and can confirm that the testcase now works perfectly and other sites using InstallTrigger (such as forecastfox.mozdev.org) also work now.
*** Bug 248486 has been marked as a duplicate of this bug. ***
Comment on attachment 184379 [details] [diff] [review] patch r/sr=dveditz, makes trunk match the branch.
Attachment #184379 - Flags: superreview+
Attachment #184379 - Flags: review?(dveditz)
Attachment #184379 - Flags: review+
Comment on attachment 184379 [details] [diff] [review] patch a=asa (time is short for 1.1a1 so please get this in quickly)
Attachment #184379 - Flags: approval-aviary1.1a1+
Landed this on trunk as per Asa's request
Resolving. Thanks, vlad.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
testcase shows notification bar for me for both trigger and direct link in deer park alpha 1 Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050524 Firefox/1.0+
I've also verified this on today's linux builds under FC3. The notification bar works as expected.
Status: RESOLVED → VERIFIED
Removing aviary-landing keyword.
Keywords: aviary-landing
(In reply to comment #21) > Removing aviary-landing keyword. > ? Was it not?
It *was*. We've been asked not to reopen fixed bugs, but just add the keyword, and remove it once the issue had been resolve, so people cc'ed on dependent bugs don't receive so much bugspam. So the aviary-landing keyword only tracks the *remaining* issues. There are 6 bugs left.
Product: Firefox → Toolkit
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: