b=274271, blocked install notification bar does not appear when clicking on InstallTrigger link; patch from moz_bugzilla@exchangecode.com, r+sr=dveditz,a=asa